--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       theme: {
         extend: {
           colors: {
-            clifford: '#da373d',
-          }
-        }
-      }
+            "clifford": '#da373d',
+          },
+        },
+      },
     }
   </script>
 
